[gd_scene load_steps=5 format=3 uid="uid://cfdnwh558m6i2"]

[ext_resource type="Script" uid="uid://b8qeh5rwsdqab" path="res://Scripts/Falling_Platform.gd" id="1_ocy05"]
[ext_resource type="Texture2D" uid="uid://4ixht17trucf" path="res://Graphics/Zonas/Green-zone/1 Tiles/Bidirectional Platform.png" id="2_ocy05"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocy05"]
size = Vector2(48, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5u1c"]
size = Vector2(48, 12)

[node name="FallingPlatform" type="RigidBody2D" groups=["Floor"]]
collision_mask = 0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_ocy05")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ocy05")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_ocy05")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_x5u1c")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="reset_platform"]
[connection signal="timeout" from="Timer2" to="." method="start_falling"]
